repos/makepy/contents/test/fail/BadSpace.rules
y = 1 2 3

forx iny:
    do:
        print( y )

all:
